add main module components and some styling

--- a/movie-rater-frontend/src/app/main/main.component.html
+++ b/movie-rater-frontend/src/app/main/main.component.html
@@ -1,3 +1,6 @@
-<p>
-    Movies will go here
-</p>
+<div class="layout">
+    <app-movie-list></app-movie-list>
+    <app-movie-details></app-movie-details>
+</div>
+
+
