--- a/movie-rater-frontend/src/app/main/main.component.html
+++ b/movie-rater-frontend/src/app/main/main.component.html
@@ -1,4 +1,7 @@
 <div class="layout">
     <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
-    <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
+    <div>
+        <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
+        <app-movie-form *ngIf="editMovie"></app-movie-form>
+    </div>
 </div>
