--- a/movie-rater-frontend/src/app/main/main.component.html
+++ b/movie-rater-frontend/src/app/main/main.component.html
@@ -1,7 +1,8 @@
 <div class="layout">
-    <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)"></app-movie-list>
+    <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)" (deletedMovie)="deleteMovie($event)"
+      (editedMovie)="editMovie($event)" (createNewMovie)="createNewMovie()"></app-movie-list>
     <div>
         <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
-        <app-movie-form *ngIf="editMovie"></app-movie-form>
+        <app-movie-form *ngIf="editedMovie" (movie)="editedMovie"></app-movie-form>
     </div>
 </div>
