--- a/movie-rater-frontend/src/app/main/main.component.html
+++ b/movie-rater-frontend/src/app/main/main.component.html
@@ -3,6 +3,7 @@
       (editedMovie)="editMovie($event)" (createNewMovie)="createNewMovie()"></app-movie-list>
     <div>
         <app-movie-details [movie]="this.selectedMovie" (updateMovie)="selectMovie($event)"></app-movie-details>
-        <app-movie-form *ngIf="editedMovie" [movie]="this.editedMovie"></app-movie-form>
+        <app-movie-form *ngIf="editedMovie" [movie]="this.editedMovie" 
+        (movieCreated)="movieCreated($event)" (movieUpdated)="movieUpdated($event)"></app-movie-form>
     </div>
 </div>
