--- a/movie-rater-frontend/src/app/app.component.css
+++ b/movie-rater-frontend/src/app/app.component.css
@@ -8,4 +8,12 @@
 
 h1 {
     text-align: center;
+    color: orange;
+    font-size: 3em;
+}
+
+h1 fa {
+    color: white;
+    display: inline-block;
+    transform: rotate(30deg);
 }
