--- a/movie-rater-frontend/src/app/main/main.component.html
+++ b/movie-rater-frontend/src/app/main/main.component.html
@@ -1,3 +1,4 @@
+<button class='logout-button '(click)="logout()">Logout</button>
 <div class="layout">
     <app-movie-list [movies]="movies" (selectMovie)="selectMovie($event)" (deletedMovie)="deleteMovie($event)"
       (editedMovie)="editMovie($event)" (createNewMovie)="createNewMovie()"></app-movie-list>
