add Django authentication and register user call

--- a/movie-rater-frontend/src/app/auth/auth.component.html
+++ b/movie-rater-frontend/src/app/auth/auth.component.html
@@ -8,5 +8,11 @@
     <br>
     <input type="password" formControlName="password"/>
     <br>
-    <button type="submit">Login</button>
+    <button type="submit">
+        <span *ngIf="!registerMode">Login</span>
+        <span *ngIf="registerMode">Register</span>
+    </button>
 </form>
+<br>
+<span *ngIf="!registerMode" (click)="registerMode = true">Don't have an account? Register here!</span>
+<span *ngIf="registerMode" (click)="registerMode = false">Already have an account? Login here!</span>
